# listmonk-newsletter

./: .dockerignore  .envrc-example  .gitignore  .tool-versions  CLAUDE.md  Justfile  README.md  TODO  docker-compose.yml  main.py  playground.py  pyproject.toml  summarize_github.py  template.j2  template.j2.html
.cursor/commands/: dev-in-browser.md
.cursor/rules/: alembic-migrations.mdc  fastapi.mdc  fix-tests.mdc  general.mdc  implement-fastapi-routes.mdc  plan-only.mdc  pytest-integration-tests.mdc  pytest-tests.mdc  python-app.mdc  python-command.mdc  python-route-tests.mdc  python.mdc  react-router-client-loader.mdc  react-router.mdc  react.mdc  refactor-on-instructions.mdc  secrets.mdc  shell.mdc  standalone-python-scripts.mdc  stripe-backend.mdc  typescript-docstring.mdc  typescript.mdc
.github/workflows/: build_and_publish.yml
data/: template.j2
listmonk_newsletter/: __init__.py  pathlib_extension.py  readwise.py  subject_generation.py  summarize_github.py  util.py
listmonk_newsletter/feed/: __init__.py  discourse.py  entry.py  rss.py
