[tool.poetry]
name = "listmonk-newsletter"
version = "0.1.0"
description = "Generate a newsletter digest from an rss feed and send it to a listmonk instance"
authors = ["Michael Bianco <mike@mikebian.co>"]
readme = "README.md"
keywords = ["listmonk", "newsletter", "rss", "feed"]
homepage = "https://github.com/iloveitaly/listmonk-newsletter"

[tool.poetry.dependencies]
python = "^3.12"
feedparser = "^6.0.12"
python-decouple-typed = "^3.11.0"
click = "^8.3.0"
requests = "^2.32.5"
structlog = "^25.5.0"
funcy-pipe = "^0.13.0"
lxml = "^6.0.2"
jinja2 = "^3.1.6"
css-inline = "^0.17.0"
html2text = "^2025.4.15"
dateparser = "^1.2.2"
backoff = "^2.2.1"
apscheduler = "^3.11.1"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
pyright = "^1.1.405"
pylint = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
listmonk-newsletter = "listmonk_newsletter:cli"

[tool.isort]
profile = "black"
float_to_top = true
