[project]
authors = [{ "name" = "Michael Bianco", "email" = "mike@mikebian.co" }]
name = "listmonk-newsletter"
version = "0.1.0"
description = "Generate a newsletter digest from an rss feed and send it to a listmonk instance"
readme = "README.md"
keywords = ["listmonk", "newsletter", "rss", "feed"]
urls = { "Repository" = "https://github.com/iloveitaly/listmonk-newsletter" }
dependencies = [
    "apscheduler==3.11.1",
    "backoff == 2.2.1",
    "click == 8.3.0",
    "css-inline == 0.17.0",
    "dateparser == 1.2.2",
    "feedparser == 6.0.11",
    "funcy-pipe == 0.13.0",
    "html2text == 2025.4.15",
    "jinja2 == 3.1.6",
    "lxml == 6.0.2",
    "markdown>=3.10",
    "pydantic-ai-slim[google]>=1.12.0",
    "python-decouple-typed == 3.11.0",
    "requests == 2.32.5",
    "structlog-config>=0.4.2",
    "tzdata>=2025.2",
    "whenever>=0.9.3",
]

[project.scripts]
listmonk-newsletter = "listmonk_newsletter:cli"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
